tests/errors/test_20.xpp
// Cannot mutate constant variable

class IntBox {
    pub x: i64;
    pub IntBox(x_: i64) {
        x = x_;
    }
}

fn main() void {
    let x = 21;
    x = 22;
	++x;
	x++;
    let mut y = x;
    y = y + 1;

    let mut z = 21;
    let z_ref = &z;
    ++z_ref;

	let arr = [1, 2, 3, 4, 5];
	arr[0] = 19;

    let mut b = IntBox(21);
    b.x = 45;


}

